--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="dist/css/template/main/style.css">
+  <link rel="stylesheet" href="dist/css/template/main/style.min.css">
   <title>Gulp</title>
 </head>
 <body>
@@ -19,6 +19,6 @@
       <a href="" class="btn">Mais Sobre</a>
     </div>
   </div>
-  <script src="dist/js/main.js"></script>
+  <script src="dist/js/main.min.js"></script>
 </body>
 </html>
